<resources>
    <string name="app_name">HHC Coin Wallet</string>
    <string name="pin_heading_choose">Set a PIN #</string>
    <string name="pin_choose_message">\"This PIN # will used to open the wallet. Don\'t forget it; if you do, you may lose access to your mobile wallet.\"</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_text"><![CDATA[By continuing, you understand the risks related to the use of cryptographic tokens, blockchain-based software, the HHC Coin mobile wallet, and the HHC Coin cryptocurrency. You understand that this product is provided as-is, and agree to the Terms and Conditions governing the usage of this product.]]></string>
    <string name="disclaimer_checkbox">Yeah, I understand</string>
    <string name="disclaimer_button">CONTINUE</string>
    <string name="wallet_heading">Create a Wallet</string>
    <string name="wallet_message">If you don\'t yet have a wallet, generate a seed and we\'ll create one for you. If you already have a wallet, enter the seed below and load it.</string>
    <string name="wallet_name_heading">Name</string>
    <string name="wallet_seed_heading">Seed</string>
    <string name="wallet_seed_confirm">Confirm seed</string>
    <string name="wallet_heading_new">New Wallet</string>
    <string name="seed_reminder_heading">Safeguard your seed!</string>
    <string name="seed_reminder_message">We want to make sure that you wrote down your seed and stored it in a safe place. If you forget your seed, you WILL NOT be able to recover your HHC Coin wallet!</string>
    <string name="seed_reminder_checkbox">It\'s safe, I swear.</string>
    <string name="wallets_list_heading">Wallets</string>
    <string name="wallet_name">Wallet</string>
    <string name="hours_name">Hours</string>
    <string name="wallet_balance">HHC</string>
    <string name="four_digit_pin">4-digit PIN</string>
    <string name="six_digit_pin">6-digit PIN</string>
    <string name="confirm_pin">Confirm Pin #</string>
    <string name="confirm_pin_text">Enter your PIN once more to continue.</string>
    <string name="pin_mismatch_message">The PINs did not match.</string>
    <string name="pin_mismatch_tryagain">TRY AGAIN</string>
    <string name="enter_wallet_name">Enter wallet name</string>
    <string name="confirm_wallet_seed">Confirm wallet seed</string>
    <string name="enter_wallet_seed">Enter wallet seed</string>
    <string name="seed">Seed</string>
    <string name="seed_alert_message">You must provide a wallet seed</string>
    <string name="ok">OK</string>
    <string name="pin_heading_interrogate">Enter your PIN to access the wallet</string>


    <string-array name="country_arrays">

        <item>4-digit PIN</item>
        <item>6-digit PIN</item>

    </string-array>

    <string name="network_error">Please check your internet connection.</string>
    <string name="network_slow_error">Slow internet connection.</string>
    <string name="server_error">Something wrong on server. Please try again.</string>
    <string name="auth_token_null">Your authentication token is empty. Please try again.</string>
    <string name="id">Id</string>
    <string name="balance">HHC</string>
    <string name="address">Address</string>
    <string name="menu">Menu</string>
    <string name="new_wallet">New Wallet</string>
    <string name="load_wallet">Load Wallet</string>
    <string name="new_address">New Address</string>
    <string name="qr_heading">View QR Code</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="add_or_load_wallet">Add or Load Wallet</string>
    <string name="add_address">Add Address</string>
    <string name="transactions">Transactions</string>
    <string name="sent_slb">Sent HHC</string>
    <string name="received_slb">Received HHC</string>
    <string name="notes">Notes</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="settings_heading">Settings</string>
    <string name="node_url">Node URL</string>
    <string name="restore_default">Restore to default</string>
    <string name="change_pin">Change PIN</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="error">Error</string>
    <string name="internet_alert_msg">Network error. Check your internet connection.</string>
    <string name="invalid_pin">Invalid Pin</string>
    <string name="invalid_node_url">Invalid Node URL</string>
    <string name="refresh">Refresh</string>
    <string name="send_heading">Send HHC</string>
    <string name="advanced_send">Advanced Send</string>
    <string name="send_from">Send from</string>
    <string name="send_to">Send to</string>
    <string name="send_amount">Amount</string>
    <string name="send">Send</string>
    <string name="send_note">Note</string>
    <string name="pin_request_to_send">Enter your PIN to complete the transaction</string>
    <string name="error_transaction_failed">Transaction failed</string>
    <string name="send_success">Send success</string>
    <string name="loading">Loading</string>
    <string name="confirm_pin_text_to_change_pin">Enter your PIN to continue</string>
    <string name="copy_tx_to_clipboard">COPY TXID TO CLIPBOARD</string>
    <string name="wallet_show_seed">Enter PIN to view wallet seed</string>

</resources>
