<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dialog_rounded_bg">

    <TextView
        android:id="@id/title"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/header_rounded_top"
        android:gravity="center"
        android:padding="16.0dip"
        android:text="@string/seed_reminder_heading"
        android:textColor="@color/reminder_red"
        android:textSize="14.0sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2.0dip"
        android:layout_below="@id/title"
        android:background="@color/transparentDarkBackground" />

    <TextView
        android:id="@id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_margin="16.0dip"
        android:gravity="start"
        android:lineSpacingExtra="8.0sp"
        android:text="@string/seed_reminder_message"
        android:textColor="@color/darkTextSemiTrans"
        android:textSize="12.0sp" />

    <CheckBox
        android:id="@id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_centerHorizontal="true"
        android:layout_margin="16.0dip"
        android:checked="false"
        android:text="@string/seed_reminder_checkbox" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="160.0dip"
        android:layout_height="50.0dip"
        android:layout_below="@id/checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40.0dip"
        android:layout_marginTop="16.0dip"
        android:background="@drawable/sk_button"
        android:enabled="false"
        android:text="@string/disclaimer_button"
        android:textColor="@drawable/sk_button_text_color"
        android:textSize="15.0sp"
        android:textStyle="bold" />
</RelativeLayout>