<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f7f7f7"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/heading_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:text="@string/id"
            android:textColor="@color/darkGreyText"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/heading_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/heading_id"
            android:layout_toStartOf="@+id/heading_hours"
            android:text="@string/address"
            android:textColor="@color/darkGreyText"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/heading_hours"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/heading_balance"
            android:gravity="start"
            android:text="@string/hours_name"
            android:textColor="@color/darkGreyText"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/heading_balance"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:gravity="end"
            android:text="@string/balance"
            android:textColor="@color/darkGreyText"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:id="@+id/bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/wallet_list_divider" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/address_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
