<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/pin_gradient_brown"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="15.0dip">

        <TextView
            android:id="@+id/wallet_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12.0dip"
            android:text="@string/wallet_heading"
            android:textColor="@color/white"
            android:textSize="20.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wallet_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8.0dip"
            android:layout_marginLeft="8.0dip"
            android:layout_marginRight="8.0dip"
            android:layout_marginTop="16.0dip"
            android:gravity="center"
            android:lineSpacingExtra="2.0sp"
            android:text="@string/wallet_message"
            android:textColor="@color/almostWhiteTextTransparent"
            android:textSize="14.0sp" />

        <RelativeLayout
            android:id="@+id/switcher"
            android:layout_width="234.0dip"
            android:layout_height="40.0dip"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/switch_background">

            <View
                android:id="@+id/new_slider_background"
                android:layout_width="112.0dip"
                android:layout_height="32.0dip"
                android:layout_centerVertical="true"
                android:layout_marginEnd="4.0dip"
                android:layout_marginStart="4.0dip"
                android:background="@drawable/switch_black_indicator" />

            <TextView
                android:id="@+id/new_label"
                android:layout_width="112.0dip"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="New"
                android:textColor="@color/white" />

            <View
                android:id="@+id/load_slider_background"
                android:layout_width="112.0dip"
                android:layout_height="32.0dip"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/switch_black_indicator"
                android:visibility="gone" />

            <TextView
                android:id="@+id/load_label"
                android:layout_width="112.0dip"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="Load"
                android:textColor="@color/lightGreyText" />
        </RelativeLayout>


        <!-- <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">-->

        <!--<RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">-->


            <TextView
                android:id="@+id/wallet_name_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/wallet_name_heading"
                android:textColor="@color/almostWhiteText"
                android:textSize="14.0sp" />

            <EditText
                android:id="@+id/wallet_name_text"
                style="@style/editTextWhiteBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.0dip"
                android:hint="@string/enter_wallet_name"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:padding="10.0dip" />

            <TextView
                android:id="@+id/wallet_seed_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12.0dip"
                android:gravity="start"
                android:text="@string/wallet_seed_heading"
                android:textColor="@color/almostWhiteText"
                android:textSize="14.0sp" />

            <EditText
                android:id="@+id/wallet_seed_text"
                style="@style/editTextWhiteBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.0dip"
                android:hint="@string/enter_wallet_seed"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="5"
                android:minLines="2"
                android:padding="10.0dip" />

            <TextView
                android:id="@+id/wallet_confirm_seed_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12.0dip"
                android:gravity="start"
                android:text="@string/wallet_seed_confirm"
                android:textColor="@color/almostWhiteText"
                android:textSize="14.0sp" />

            <EditText
                android:id="@+id/wallet_seed_confirm"
                style="@style/editTextWhiteBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.0dip"
                android:hint="@string/confirm_wallet_seed"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="5"
                android:minLines="2"
                android:padding="10.0dip" />

            <Button
                android:id="@+id/create_button"
                android:layout_width="160.0dip"
                android:layout_height="50.0dip"
                android:layout_gravity="center_horizontal"
                android:layout_margin="32.0dip"
                android:background="@drawable/sk_button_black"
                android:enabled="false"
                android:text="Create"
                android:textColor="@drawable/sk_button_black_text_color" />
        <!--</RelativeLayout>-->

        <!--</ScrollView>-->

    </LinearLayout>

</LinearLayout>