<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff7f7f7"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff7f7f7"
        android:orientation="horizontal"
        android:padding="16.0dip">

        <TextView
            android:id="@+id/heading_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/heading_hours"
            android:text="@string/wallet_name"
            android:textColor="@color/darkGreyText"
            android:textSize="12.0sp" />

        <TextView
            android:id="@+id/heading_hours"
            android:layout_width="80.0dip"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/hours_name"
            android:textColor="@color/darkGreyText"
            android:textSize="12.0sp" />

        <TextView
            android:id="@+id/heading_balance"
            android:layout_width="80.0dip"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32.0dip"
            android:gravity="end"
            android:text="@string/wallet_balance"
            android:textColor="@color/darkGreyText"
            android:textSize="12.0sp" />
    </RelativeLayout>

    <View
        android:id="@+id/bottom_divider"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="@color/wallet_list_divider" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/wallet_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </android.support.v7.widget.RecyclerView>

    </ScrollView>




</LinearLayout>