<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/rounded_top"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/wallet_heading_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_rounded_top">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="16.0dip"
            android:text="@string/send_heading"
            android:textColor="#ff1e2227"
            android:textStyle="bold" />

        <Button
            android:id="@+id/advanced_button"
            android:layout_width="wrap_content"
            android:layout_height="40.0dip"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8.0dip"
            android:background="@drawable/sk_button"
            android:paddingEnd="12.0dip"
            android:paddingStart="12.0dip"
            android:text="@string/advanced_send"
            android:textColor="@drawable/sk_button_text_color"
            android:textSize="10.0sp"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="2.0dip"
        android:layout_below="@+id/wallet_heading_rl"
        android:background="@color/transparentDarkBackground" />

    <!-- <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="0.0dip"
         android:layout_weight="1.0">-->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_marginEnd="24.0dip"
        android:layout_marginStart="24.0dip">

        <TextView
            android:id="@+id/wallet_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24.0dip"
            android:padding="8.0dip"
            android:text="@string/send_from"
            android:textColor="@color/darkText"
            android:textSize="12.0sp" />

        <Spinner
            android:id="@+id/wallet_selector"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wallet_heading"
            android:layout_marginTop="4.0dip"
            android:background="@drawable/rounded_white_rect_with_border"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/address_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/wallet_selector"
            android:layout_marginTop="24.0dip"
            android:padding="8.0dip"
            android:text="@string/send_to"
            android:textColor="@color/darkText"
            android:textSize="12.0sp" />

        <LinearLayout
            android:id="@+id/address_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_heading"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/address_text"
                style="@style/editTextWhiteBox"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/rounded_white_rect_with_border"
                android:hint="HHC Address"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:padding="12.0dip" />

            <ImageView
                android:id="@+id/qr_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8.0dip"
                android:src="@drawable/qr_code_black" />
        </LinearLayout>

        <TextView
            android:id="@+id/amount_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/address_container"
            android:layout_marginTop="24.0dip"
            android:padding="8.0dip"
            android:text="@string/send_amount"
            android:textColor="@color/darkText"
            android:textSize="12.0sp" />

        <EditText
            android:id="@+id/amount_text"
            style="@style/editTextWhiteBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/amount_heading"
            android:layout_marginTop="4.0dip"
            android:layout_toStartOf="@id/fiat_preview"
            android:background="@drawable/rounded_white_rect_with_border"
            android:hint="Amount"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:padding="12.0dip" />

        <TextView
            android:id="@+id/fiat_preview"
            android:layout_width="80.0dip"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/amount_text"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/amount_heading"
            android:layout_marginStart="16.0dip"
            android:gravity="center"
            android:lines="2"
            android:maxLines="2"
            android:textColor="@color/darkGreyText"
            android:textSize="12.0sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/note_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/amount_text"
            android:layout_marginTop="24.0dip"
            android:padding="8.0dip"
            android:text="@string/send_note"
            android:textColor="@color/darkText"
            android:textSize="12.0sp" />

        <EditText
            android:id="@+id/note_text"
            style="@style/editTextWhiteBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/note_heading"
            android:layout_marginTop="4.0dip"
            android:background="@drawable/rounded_white_rect_with_border"
            android:hint="Notes"
            android:inputType="text"
            android:lines="2"
            android:maxLines="2"
            android:minLines="1"
            android:padding="12.0dip" />
    </RelativeLayout>
    <!--</ScrollView>-->

    <LinearLayout
        android:id="@id/button_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/transaction_cancel_button"
            android:layout_width="0.0dip"
            android:layout_height="50.0dip"
            android:layout_marginBottom="8.0dip"
            android:layout_marginEnd="16.0dip"
            android:layout_marginStart="16.0dip"
            android:layout_marginTop="8.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/button_inactive_gray"
            android:text="@string/cancel"
            android:textColor="@color/darkAlmostBlack" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8.0dip"
            android:layout_marginEnd="16.0dip"
            android:layout_marginStart="16.0dip"
            android:layout_marginTop="8.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/sk_button"
            android:text="@string/send"
            android:textColor="@drawable/sk_button_text_color" />
    </LinearLayout>
</RelativeLayout>